--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
 body{
     background-color: #131313;
+    font-family: 'Titillium Web', sans-serif;
+    color: #fff;
     width: 90%;
     margin: auto;
     
-}
+        main{
+            display: grid;
+            grid-template-columns: 1fr 3fr;
+            gap: 1vw;
+        }
+    }
