--- a/src/components/Partials/Footer/Footer.scss
+++ b/src/components/Partials/Footer/Footer.scss
@@ -1,10 +1,12 @@
 
 footer{
-    position: absolute;
+    position: sticky;
     left: 0;
     bottom: 0;
+    margin-left: -5vw;
+    overflow-x: hidden;
     background-color: #393939;
-    width: 100vw;
+    width: 99.16vw;
     display: flex;
     justify-content: center;
 }
