--- a/src/components/Partials/NavContact/NavContact.scss
+++ b/src/components/Partials/NavContact/NavContact.scss
@@ -36,16 +36,25 @@ article{
            background-color: #2C3737;
            color: #00F9B6;
            border: 1px solid #1F5E5B;
+           padding-left: .5vw;
            &::placeholder{
             color: #00F9B6;
-            padding-left: .5vw;
+           }
+           &:focus{
+            outline: none;
+            border: 1px solid #00F9B6;
+            
            }
         }
         button{
+           padding-top: .2vw;
            height: 2vw;
            background-color: #00F9B6;
            color: #1F5E5B;
-            border: 1px solid #1F5E5B;
+           border: 1px solid #1F5E5B;
+           &:hover{
+            background-color: #00bc8a;
+           }
         }
     }
 }
