--- a/src/App.scss
+++ b/src/App.scss
@@ -4,12 +4,17 @@ body{
     background-color: #131313;
     font-family: 'Titillium Web', sans-serif;
     color: #fff;
-    width: 90%;
-    margin: auto;
-    
+    header{
+        width: 90%;
+        margin: auto;
+        
+    }
         main{
             display: grid;
             grid-template-columns: 1fr 3fr;
             gap: 1vw;
+            width: 90%;
+            margin: auto;
+            
         }
     }
