--- a/src/components/Partials/Nav/LeftNav.scss
+++ b/src/components/Partials/Nav/LeftNav.scss
@@ -1,27 +1,45 @@
-#LeftNav{
+
+main{
     position: relative;
-    ul{
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: flex;
-        flex-direction: column;
-        width: fit-content;
-       
-        .accordion{
-            cursor: pointer;
-            padding: 18px;
-            width: 100%;
-            border: none;
-            text-align: left;
-            outline: none;
-            font-size: 15px;
-            transition: 0.4s;
-        }
-        .panel {
-            padding: 0 18px;
-            display: none;
-            overflow: hidden;
+    #LeftNav{
+        margin-top: 3vw;
+        width: 100%;
+        height: 100vh;    
+        background-color: #0A1D1C;
+        border: 1px solid #1F5E5B;
+
+        ul{
+            position: absolute;
+            left: 0;
+            top: 0;
+            padding-top: 1vw;
+            display: flex;
+            flex-direction: column;
+            width: fit-content;
+            .accordion{
+                
+                padding-bottom: .3vw;
+                cursor: pointer;
+                text-align: left;
+                transition: 0.4s;
+                a{
+                    color: #00F9B6;
+                    font-size: 1vw;
+                }
+            }
+            .panel {
+                padding-inline: 1vw;
+                padding-bottom: 1vw;
+                display: none;
+                overflow: hidden;
+                a{
+                color: #00F9B6;
+                font-size: 1vw;
+                &:focus{
+                    color:#fff;
+                }
+            }
         }
     }
+}
 }
